--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Hidratei" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.ThemeStylesIcons" parent="Theme.Material3.Light">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/azul</item>
+         <item name="colorPrimaryVariant">@color/azul_escuro</item>
+         <item name="colorOnPrimary">@color/preto</item>
     </style>
 
-    <style name="Theme.Hidratei" parent="Base.Theme.Hidratei" />
 </resources>
