--- a/app/src/main/res/layout/activity_pessoas.xml
+++ b/app/src/main/res/layout/activity_pessoas.xml
@@ -12,13 +12,30 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/linha_lista_pessoas"/>
+        app:layout_constraintVertical_bias="1.0"
+        tools:listitem="@layout/linha_lista_pessoas" />
+
+    <Button
+        android:id="@+id/buttonSobre"
+        android:layout_width="115dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="abrirSobre"
+        android:text="@string/sobre"
+        app:layout_constraintBottom_toTopOf="@+id/recycleViewPessoas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
