--- a/app/src/main/res/layout/activity_pessoas.xml
+++ b/app/src/main/res/layout/activity_pessoas.xml
@@ -25,16 +25,29 @@
 
     <Button
         android:id="@+id/buttonSobre"
-        android:layout_width="115dp"
-        android:layout_height="36dp"
+        android:layout_width="116dp"
+        android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
         android:onClick="abrirSobre"
         android:text="@string/sobre"
-        app:layout_constraintBottom_toTopOf="@+id/recycleViewPessoas"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonAdicionar"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonAdicionar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="abrirNovaPessoa"
+        android:text="@string/adicionar"
+        app:layout_constraintEnd_toStartOf="@+id/buttonSobre"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
