--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="preto">#FF000000</color>
     <color name="branco">#FFFFFFFF</color>
     <color name="azul">#4359D5</color>
+    <color name="azul_claro">#5C75F8</color>
     <color name="azul_escuro">#232E76</color>
     <color name="cinza_escuro">#7C7A7A</color>
 
