editar e excluir cadastro

--- a/app/src/main/res/menu/pessoas_opcoes.xml
+++ b/app/src/main/res/menu/pessoas_opcoes.xml
@@ -6,6 +6,7 @@
         android:id="@+id/menuItemAdicionar"
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/adicionar"
+        android:visible="true"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuItemSobre"
