--- a/app/src/main/res/menu/pessoa_opcoes.xml
+++ b/app/src/main/res/menu/pessoa_opcoes.xml
@@ -5,9 +5,11 @@
     <item
         android:id="@+id/menuItemCadastrar"
         android:icon="@android:drawable/ic_menu_save"
-        android:title="@string/cadastrar" />
+        android:title="@string/cadastrar"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuItemLimpar"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/limpar" />
+        android:title="@string/limpar"
+        app:showAsAction="ifRoom" />
 </menu>
