--- a/app/src/main/res/menu/pessoa_opcoes.xml
+++ b/app/src/main/res/menu/pessoa_opcoes.xml
@@ -12,4 +12,8 @@
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/limpar"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menuItemSugerirTipo"
+        android:checkable="true"
+        android:title="@string/sugerir_tipo" />
 </menu>
