--- a/app/src/main/res/menu/pessoas_opcoes.xml
+++ b/app/src/main/res/menu/pessoas_opcoes.xml
@@ -9,6 +9,14 @@
         android:visible="true"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/menuItemOrdenacao"
+        android:icon="@drawable/ic_action_ascending_order"
+        android:title="@string/ordenacao"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menuItemRestaurar"
+        android:title="@string/restaurar_padroes" />
+    <item
         android:id="@+id/menuItemSobre"
         android:title="@string/sobre" />
 </menu>
