AlertDialog - Mostrar Aviso e Confirmação

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,6 @@
          <item name="colorOnPrimary">@color/preto</item>
     </style>
 
+    <color name="corSelecionado">@color/azul_transparente</color>
+
 </resources>
