--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,4 +8,6 @@
         <item name="android:textColorLink">@color/azul_claro</item>
 
     </style>
+
+    <color name="corSelecionado">@color/azul_claro</color>
 </resources>
