--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="azul_claro">#5C75F8</color>
     <color name="azul_escuro">#232E76</color>
     <color name="cinza_escuro">#7C7A7A</color>
+    <color name="azul_transparente">#7E232DE6</color>
 
 
 </resources>
